--- a/404.html
+++ b/404.html
@@ -217,7 +217,7 @@
         <li class="nav-item">
           <a href="/#teaching">
             
-            <span>Teaching</span>
+            <span>Aulas e Cursos</span>
             
           </a>
         </li>
