--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="Professor of Artificial Intelligence">
+  <meta name="description" content="MSc candidate">
 
   
   <link rel="alternate" hreflang="en-us" href="">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Academic">
   <meta property="og:url" content="">
   <meta property="og:title" content="404 Page not found | Academic">
-  <meta property="og:description" content="Professor of Artificial Intelligence"><meta property="og:image" content="https://mferrac.github.io/img/icon-192.png">
+  <meta property="og:description" content="MSc candidate"><meta property="og:image" content="https://mferrac.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
