--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@ Outside of agriculture, I have developed projects on fraud detection, lawsuit ou
 
     
     <div class="article-style" itemprop="articleBody">
-      Instruções para a aula 02 Instalação do Jupyter com R Para instalar o Jupyter notebook no windows, primeiro é preciso instalar o …
+      Instalação do Jupyter com R Para instalar o Jupyter notebook no windows, primeiro é preciso instalar o anaconda no link: …
     </div>
     
 
