--- a/index.html
+++ b/index.html
@@ -1030,8 +1030,8 @@ Outside of agriculture, I have developed projects on fraud detection, lawsuit ou
 
     
     <div class="article-style" itemprop="articleBody">
-      Arquivos da aula Os arquivos da aula podem ser baixados em http://bit.ly/feagri_analise_dados_aula02
-Instalação do Jupyter com R Para …
+      Arquivos da aula Os arquivos da aula podem ser baixados neste link.
+Instalação do Jupyter com R Para instalar o Jupyter notebook no …
     </div>
     
 
