--- a/index.html
+++ b/index.html
@@ -1030,8 +1030,9 @@ Outside of agriculture, I have developed projects on fraud detection, lawsuit ou
 
     
     <div class="article-style" itemprop="articleBody">
-      Arquivos da aula Os arquivos da aula podem ser baixados neste link.
-Instalação do Jupyter com R Para instalar o Jupyter notebook no …
+      Homework  Baixe os dados em https://transfer.sh/ElXkS/adult_data.csv
+ Importe os dados no Rstudio
+ Envie as respostas pelo formulário …
     </div>
     
 
