--- a/index.html
+++ b/index.html
@@ -1030,9 +1030,9 @@ Outside of agriculture, I have developed projects on fraud detection, lawsuit ou
 
     
     <div class="article-style" itemprop="articleBody">
-      Dados para a aula Baixar em transfer.sh/I109G/aula03.zip
+      Dados para a aula Baixar em https://transfer.sh/I109G/aula03.zip
 Instalações Para esta aula, serão necessários os pacotes:
- mlr: Esta bibloteca …
+ mlr: Esta …
     </div>
     
 
