--- a/404.html
+++ b/404.html
@@ -342,7 +342,7 @@
     </ul>
     
     <ul>
-      <li><a href="/post/feg18-aula05/">FEG18 Aula05</a></li>
+      <li><a href="/post/feg18-aula05/">Análise de dados - Aula 05</a></li>
     </ul>
     
     <ul>
