--- a/index.html
+++ b/index.html
@@ -1115,7 +1115,7 @@ Outside of agriculture, I have developed projects on fraud detection, lawsuit ou
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0" itemprop="name">
-      <a href="/post/feg18-aula05/" itemprop="url">FEG18 Aula05</a>
+      <a href="/post/feg18-aula05/" itemprop="url">Análise de dados - Aula 05</a>
     </h3>
 
     
